--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "scripts": {
-    "start": "node src/bot.js",
+    "start": "nodemon src/bot.js",
     "migrate": "npx prisma migrate dev --name init",
     "prisma:studio": "npx prisma studio"
   },
@@ -11,6 +11,7 @@
     "@prisma/client": "^6.7.0",
     "dotenv": "^16.5.0",
     "node-cron": "^3.0.3",
+    "nodemon": "^3.1.10",
     "prisma": "^6.7.0",
     "telegraf": "^4.16.3"
   }
