--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,19 +18,19 @@ services:
       timeout: 5s
       retries: 5
 
-  bot:
-    build: .
-    container_name: indiga_bot
-    depends_on:
-      postgres:
-        condition: service_healthy
-    environment:
-      - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-      - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?schema=public
-      - CHANNEL_USERNAME=${CHANNEL_USERNAME}
-      - GROUP_LINK=${GROUP_LINK}
-      - GROUP_CHAT_ID=${GROUP_CHAT_ID}
-    restart: unless-stopped
+  # bot:
+  #   build: .
+  #   container_name: indiga_bot
+  #   depends_on:
+  #     postgres:
+  #       condition: service_healthy
+  #   environment:
+  #     - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
+  #     - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?schema=public
+  #     - CHANNEL_USERNAME=${CHANNEL_USERNAME}
+  #     - GROUP_LINK=${GROUP_LINK}
+  #     - GROUP_CHAT_ID=${GROUP_CHAT_ID}
+  #   restart: unless-stopped
 
 volumes:
   postgres_data:
