--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,7 @@
-DB_USER=postgress
-DB_PASSWORD=postgress
-DB_NAME=postgress
-DB_PASSWORD=postgress
-DB_NAME=postgress
-CHANNEL_USERNAME=https://t.me/indiga_test_channel
-GROUP_LINK=https://t.me/indigatestgruppa
 GROUP_CHAT_ID=-1002566969406
 TELEGRAM_BOT_TOKEN=
 
-DATABASE_URL="postgresql://postgress:postgress@localhost:5432/postgress?schema=public"
+DATABASE_URL="postgresql://postgres:postgres@db:5432/botdb?schema=public"
 
-# "postgresql://postgres.sougfhzyareeiteejlus:[YOUR-PASSWORD]@aws-0-eu-north-1.pooler.supabase.com:5432/postgres"
+
+# supabase
