--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,36 +1,34 @@
-version: '3.8'
+version: '3.9'
 
 services:
-  postgres:
-    image: postgres:13
-    container_name: indiga_db
+  bot:
+    build: .
+    container_name: telegraf_bot
+    restart: unless-stopped
+    env_file: .env
+    depends_on:
+      - db
+    develop:
+      watch:
+        - path: ./package*.json
+          action: rebuild
+        - path: ./package-lock*.json
+          action: rebuild
+        - path: ./
+          target: ./app
+          action: sync
+  db:
+    image: postgres:15
+    container_name: telegraf_db
+    restart: unless-stopped
     environment:
-      POSTGRES_USER: ${DB_USER}
-      POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: ${DB_NAME}
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: botdb
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - db_data:/var/lib/postgresql/data
     ports:
-      - "5432:5432"
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${DB_USER} -d ${DB_NAME}"]
-      interval: 5s
-      timeout: 5s
-      retries: 5
-
-  # bot:
-  #   build: .
-  #   container_name: indiga_bot
-  #   depends_on:
-  #     postgres:
-  #       condition: service_healthy
-  #   environment:
-  #     - TELEGRAM_BOT_TOKEN=${TELEGRAM_BOT_TOKEN}
-  #     - DATABASE_URL=postgresql://${DB_USER}:${DB_PASSWORD}@postgres:5432/${DB_NAME}?schema=public
-  #     - CHANNEL_USERNAME=${CHANNEL_USERNAME}
-  #     - GROUP_LINK=${GROUP_LINK}
-  #     - GROUP_CHAT_ID=${GROUP_CHAT_ID}
-  #   restart: unless-stopped
+      - '5432:5432'
 
 volumes:
-  postgres_data:
+  db_data:
